# lightsout-gfn

./: .gitignore  README.md  config.py  core.py  infer.py  main.py  models.py  pyproject.toml  train.py
