[project]
name = "lightsout-gfn"
version = "0.1.0"
description = "Solving 'Lights Out!' with Generative Flow Networks (GFlowNets)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.10.4",
    "jax[cuda12]==0.5.2",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.3",
    "numpy>=2.2.4",
    "orbax-checkpoint>=0.6.4",
    "pyqt6>=6.9.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
orbax-checkpoint = { git = "https://github.com/google/orbax/", subdirectory = "checkpoint" }
